--- a/Web.css
+++ b/Web.css
@@ -1,180 +1,194 @@
 .syllabus-container {
-    font-family: Arial, sans-serif;
-    margin: 20px;
+  font-family: Arial, sans-serif;
+  margin: 20px;
 }
 
 .syllabus-container table {
-    width: 100%;
-    border-collapse: collapse;
-    margin: 20px 0;
+  width: 100%;
+  border-collapse: collapse;
+  margin: 20px 0;
 }
 
-.syllabus-container th, 
+.syllabus-container th,
 .syllabus-container td {
-    border: 1px solid #ccc;
-    padding: 8px;
-    text-align: left;
+  border: 1px solid #ccc;
+  padding: 8px;
+  text-align: left;
 }
 
 .syllabus-container th {
-    background-color: #f4f4f4;
+  background-color: #f4f4f4;
 }
 
 @media (max-width: 600px) {
-    .syllabus-container table, 
-    .syllabus-container thead, 
-    .syllabus-container tbody, 
-    .syllabus-container th, 
-    .syllabus-container td, 
-    .syllabus-container tr {
-        display: block;
-    }
-    .syllabus-container th {
-        display: none;
-    }
-    .syllabus-container tr {
-        margin-bottom: 15px;
-    }
-    .syllabus-container td {
-        text-align: right;
-        position: relative;
-        padding-left: 50%;
-    }
-    .syllabus-container td:before {
-
-        position: absolute;
-        left: 10px;
-        width: 45%;
-        padding-right: 10px;
-        white-space: nowrap;
-        text-align: left;
-    }
+  .syllabus-container table,
+  .syllabus-container thead,
+  .syllabus-container tbody,
+  .syllabus-container th,
+  .syllabus-container td,
+  .syllabus-container tr {
+    display: block;
+  }
+  .syllabus-container th {
+    display: none;
+  }
+  .syllabus-container tr {
+    margin-bottom: 15px;
+  }
+  .syllabus-container td {
+    text-align: right;
+    position: relative;
+    padding-left: 50%;
+  }
+  .syllabus-container td:before {
+    position: absolute;
+    left: 10px;
+    width: 45%;
+    padding-right: 10px;
+    white-space: nowrap;
+    text-align: left;
+  }
 }
-.body{
-	margin: 100px;
-	margin-left:300px;
+.body {
+  margin: 100px;
+  margin-left: 300px;
 }
 
-p{
-word-spacing: 4px;	
-padding-bottom: 60px;
-}	
+p {
+  word-spacing: 4px;
+  padding-bottom: 60px;
+}
 
 .center {
-	display: block;
-	margin-left: auto;
-	margin-right: auto;
-	width: 50%;
-  }
-
-.topnav {
-	overflow: hidden;
-	background-color: #333;
-	position: fixed;
-    top: 0; 
-    width: 100%;
-    z-index: 1000; 
-	
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
 }
 
+.topnav {
+  overflow: hidden;
+  background-color: #333;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 1000;
+}
 
-.topnav a{
-	float:left;
-	color: #f2f2f2;
-	text-align: center;
-	padding: 14px 16px;
-	text-decoration: none;
-	font-size: 17px;
+.topnav a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 26px;
+  text-decoration: none;
+  font-size: 17px;
 }
 
 .topnav a:hover {
-	background-color: #ddd;
-	color: black;
-  }
-  
-  .topnav a.active {
-	background-color: #04AA6D;
-	color: white;
-  }
+  background-color: #ddd;
+  color: black;
+}
 
-  .sidenav {
-	height: 100%;
-	width: 160px;
-	position: fixed;
-	z-index: 1;
-	top: 0;
-	left: 0;
-	background-color: #111;
-	overflow-x: hidden;
-	padding-top: 20px;
-  }
+.topnav a.active {
+  background-color: #04aa6d;
+  color: white;
+}
 
-  .sidenav a{
-	float:left;
-	color: #f2f2f2;
-	text-align: center;
-	padding: 14px 16px;
-	text-decoration: none;
-	font-size: 17px;
-  }
+.sidenav {
+  height: 100%;
+  width: 160px;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: #111;
+  overflow-x: hidden;
+  padding-top: 20px;
+}
 
-  .sidenav a.active{
-	background-color: #04AA6D;
-	color: white;
-  }
+.sidenav a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 30px 26px;
+  text-decoration: none;
+  font-size: 17px;
+}
 
-  .sidenav a:hover{
-	background-color: #ddd;
-	color: black;
-  }
+.sidenav a.active {
+  background-color: #04aa6d;
+  color: white;
+}
 
- dt{
-	font-weight: bold;
- }
+.sidenav a:hover {
+  background-color: #ddd;
+  color: black;
+}
 
-dd{
-	padding-right: 100px;
-	padding-bottom: 15px;
-  }
+dt {
+  font-weight: bold;
+}
 
-table, th {
-	border: solid black;
-	border-collapse: collapse;
-  }
+dd {
+  padding-right: 100px;
+  padding-bottom: 15px;
+}
 
-  td{
-	width:400px;
-	border-right: solid black;
-	padding-bottom: 10px;
-  }
+table,
+th {
+  border: solid black;
+  border-collapse: collapse;
+}
 
-  h2{
-	font-size: 18px;
-  }
+td {
+  width: 400px;
+  border: solid black;
+  padding-bottom: 10px;
+}
 
-  li{
-	padding-bottom: 6px;
-  }
+h2 {
+  font-size: 18px;
+}
 
-  .main{
-	font-weight: bolder;
-	font-size: 48px;
-  }
+li {
+  padding-bottom: 6px;
+}
 
-  .wide-row{
-	width: 250px;
-  }
+.main {
+  font-weight: bolder;
+  font-size: 48px;
+}
 
-  .table-width{
-   text-align: center;
-   margin-left: 300px;
-  }
-  
-  .table-width td{
-    border-bottom:2px solid black;
-	padding-top: 8px;
-  }
+.wide-row {
+  width: 250px;
+}
 
-  .table-width table{
-	width: 200px;
-  }
+.table-width {
+  text-align: center;
+  margin-left: 300px;
+}
+
+.table-width td {
+  border-bottom: 2px solid black;
+  padding-top: 8px;
+}
+
+.table-width table {
+  width: 200px;
+}
+
+.padding {
+  width: 50%;
+}
+
+.padding th {
+  text-align: center;
+  border: solid black;
+  border-collapse: collapse;
+}
+
+.padding td {
+  border: solid black;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
