--- a/Web.css
+++ b/Web.css
@@ -14,13 +14,13 @@
 
 .syllabus-container th,
 .syllabus-container td {
-  border: 1px solid #ccc;
+  border: 1px solid #030303;
   padding: 8px;
   text-align: left;
 }
 
 .syllabus-container th {
-  background-color: #f4f4f4;
+  background-color: #3a3a3a;
 }
 
 @media (max-width: 600px) {
@@ -141,6 +141,10 @@ dd {
   padding-bottom: 15px;
 }
 
+pre {
+  font-size: 20px;
+}
+
 table,
 th {
   border: solid black;
@@ -198,4 +202,28 @@ li {
   border: solid black;
   padding-top: 10px;
   padding-bottom: 10px;
+}
+
+.nav {
+  overflow: hidden;
+  width: 250px;
+}
+
+.nav a {
+  float: left;
+  color: #ccc;
+  text-align: center;
+  padding: 14px 26px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.nav a:hover {
+  background-color: #04aa6d;
+  color: white;
+}
+
+body {
+  background-color: #333;
+  color: #ccc;
 }
